syntax = "proto3";

package product;

service Products {

    // 获取商品列表
    rpc GetProductsByPage (Request) returns (Response) {
    }
    // 商品是否存在
    rpc Exist (Request) returns (Response) {
    }
    // 创建商品
    rpc Create(Request) returns (Response) {}
    // 更新商品
    rpc Update(Request) returns (Response) {}
    // 删除商品
    rpc Delete(Request) returns (Response) {}
    // 商品详情
    rpc Info(Request) returns (Response) {}
}

message Product {
    int64 id=1;
    string product_id=2;
    string product_name=3;
    string product_intro=4;
    int64 product_category_id=5;
    string product_cover_img=6;
    string product_carousel=7;
    double original_price=8;
    double selling_price=9;
    int32 stock_num=10;
    string tag=11;
    int32 product_sell_status=12;
    int64 create_user=13;
    int64 update_user=14;
    string product_detail_content=15;
    string created_at = 16;
    string updated_at = 17;
}

message ListQuery {
    int64 limit=1;          // 返回数量
    int64 page=2;           // 页面
    string sort=3;          // 排序
    string where = 4;       // 查询条件
}
message Request {
    ListQuery list_query = 1; // 列表分页请求
    Product product = 2; // 用户
}

message Response {
    bool valid = 1;
    int64 total = 2;
    Product product = 3;
    repeated Product product_list = 4;
}